--- a/livraria/WebContent/_template.xhtml
+++ b/livraria/WebContent/_template.xhtml
@@ -6,41 +6,61 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-	<h:head />
-	<h:body>
-		<div id="cabecalho">
-			<h:panelGrid columns="2">
-				<h:graphicImage library="img" style="max-width: 100px; max-height: 100px" name="Avanade.png" />
-							
-				<h:form rendered="#{usuarioLogado != null}" style="position:absolute; right: 10px">
-					<p:themeSwitcher id="basic" style="width:165px" value="#{temaBean.tema}">
-						<f:selectItem itemLabel="Choose Theme" itemValue="" />
-						<f:selectItems value="#{temaBean.temas}" var="tema" itemLabel="#{tema}" itemValue="#{tema}" />
-						<f:ajax />
-					</p:themeSwitcher>
-				</h:form>
-			</h:panelGrid>
+<h:head> 
+	<h:outputStylesheet library="css" name="stylesheet.css"/>
+</h:head>
+<h:body>
+	<div id="cabecalho">
+
+		<h:panelGrid columns="2" width="100%">
+			<h:graphicImage library="img"
+				style="max-width: 100px; max-height: 100px" name="Avanade.png" />
+
 			
-			<p:growl id="messages" showDetail="true" autoUpdate="true" />
-			
-			<h:form rendered="#{usuarioLogado != null}">	
-				<p:menuButton value="Menu">
-					<p:menuitem value="Livros" action="livro?faces-redirect=true" icon="fa fa-fw fa-edit" />
-					<p:menuitem value="Autores" action="autor?faces-redirect=true" icon="fa fa-fw fa-edit" />
-					<p:separator />
-					<p:menuitem value="Logout" action="#{loginBean.deslogar}" icon="fa fa-fw fa-sign-out" />
-				</p:menuButton>
+			<p:outputLabel rendered="#{usuarioLogado != null}" value="Bem Vindo #{usuarioLogado.nome}" />
+			<h:form rendered="#{usuarioLogado != null}"
+				style="position:absolute; right: 10px; top: 35px;">
+				
+
+				<p:themeSwitcher id="basic"
+					style="width:165px; align:rigth; margin-bottom:100px"
+					value="#{temaBean.tema}">
+					<f:selectItem itemLabel="Choose Theme" itemValue="" />
+					<f:selectItems value="#{temaBean.temas}" var="tema"
+						itemLabel="#{tema}" itemValue="#{tema}" />
+					<f:ajax />
+				</p:themeSwitcher>
 			</h:form>
-			
-			<h1>
-				<ui:insert name="titulo"></ui:insert>
-			</h1>
-		</div>
-	
-		<div id="conteudo">
-			<ui:insert name="conteudo">
-			</ui:insert>
-		</div>
-	</h:body>
+		</h:panelGrid>
+
+		<p:growl id="messages" showDetail="true" autoUpdate="true" />
+
+		<h:form rendered="#{usuarioLogado != null}">
+			<p:menubar>
+				<p:menuitem value=" Livros" action="livro?faces-redirect=true"
+					icon="fa fa-fw fa-book" />
+				<p:menuitem value="Autores" action="autor?faces-redirect=true"
+					icon="fa fa-fw fa-pencil" />
+				<p:menuitem value="Usuários" action="usuario?faces-redirect=true"
+					icon="fa fa-fw fa-user" rendered="#{usuarioLogado.perfil == 'ADMINISTRADOR'}" />
+
+				<f:facet name="options">
+					<p:commandButton type="submit" value="Logout"
+						action="#{loginBean.deslogar}" icon="fa fa-fw fa-sign-out" />
+				</f:facet>
+
+			</p:menubar>
+		</h:form>
+
+		<h1>
+			<ui:insert name="titulo"></ui:insert>
+		</h1>
+	</div>
+
+	<div id="conteudo">
+		<ui:insert name="conteudo">
+		</ui:insert>
+	</div>
+</h:body>
 
 </html>
