--- a/livraria/WebContent/login.xhtml
+++ b/livraria/WebContent/login.xhtml
@@ -7,12 +7,16 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 <ui:composition template="_template.xhtml">
-
+	 
 	<ui:define name="titulo">
 		<p:outputPanel>Login</p:outputPanel>
 	</ui:define>
 
 	<ui:define name="conteudo">
+	<f:metadata>
+	<f:event type="preRenderView" listener="#{loginBean.loginComCookie}"/>
+	
+	</f:metadata>
 
 		<p:messages globalOnly="true" />
 
@@ -23,14 +27,14 @@
 					<h:panelGrid columns="2">
 
 						<p:outputLabel value="Email:" for="email" />
-						<p:inputText id="email" value="#{loginBean.usuario.email}"
+						<p:inputText id="email" value="#{loginBean.usuarioLogin.email}"
 							required="true">
 							<f:passThroughAttribute name="type" value="email" />
 						</p:inputText>
 
 
 						<p:outputLabel value="Senha:" for="senha" />
-						<p:password id="senha" value="#{loginBean.usuario.senha}"
+						<p:password id="senha" value="#{loginBean.usuarioLogin.senha}"
 							feedback="true" required="true" />
 
 						<p:commandButton value="Efetue Login"
